--- a/project.properties
+++ b/project.properties
@@ -13,4 +13,4 @@
 # Project target.
 target=android-22
 android.library=false
-android.library.reference.1=../HoloColorPicker
+android.library.reference.1=../../../Desktop/HoloColorPicker-master/libary/src/main
